* Changed update and search methods + Added new update UI

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.32</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>17.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
