--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ out/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+Potvrda.png
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
