--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,7 @@ out/
 Potvrda.png
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
