--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
             <version>17.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.32</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.40.1.0</version>
         </dependency>
     </dependencies>
 
